Add integration test for Keycloak vault sync.